--- a/package.json
+++ b/package.json
@@ -22,8 +22,15 @@
     "react-router-dom": "^7.6.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "sharp": "^0.34.2",
+    "svgo": "^3.3.2",
     "swiper": "^11.2.8",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-image-optimizer": "^1.1.8",
+    "vite-plugin-imp": "^2.4.0",
+    "vite-plugin-preload": "^0.4.2",
+    "vite-plugin-pwa": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
