--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
+    "bad-words": "^4.0.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
+    "owasp-password-strength-test": "^1.3.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.1",
     "react-dom": "^18.2.0",
@@ -30,7 +34,8 @@
     "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-imp": "^2.4.0",
     "vite-plugin-preload": "^0.4.2",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
