--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react-accessible-accordion": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^6.0.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "sharp": "^0.34.2",
+    "socket.io-client": "^4.8.1",
     "svgo": "^3.3.2",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.8",
@@ -35,7 +36,8 @@
     "vite-plugin-imp": "^2.4.0",
     "vite-plugin-preload": "^0.4.2",
     "vite-plugin-pwa": "^1.0.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
