--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "bad-words": "^4.0.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
     "owasp-password-strength-test": "^1.3.0",
@@ -27,6 +28,7 @@
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "sharp": "^0.34.2",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "svgo": "^3.3.2",
     "swiper": "^11.2.8",
