--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "axios": "^1.9.0",
     "bad-words": "^4.0.0",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "date-fns": "^4.1.0",
+    "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
     "owasp-password-strength-test": "^1.3.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.1",
+    "react-color": "^2.19.3",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^6.0.0",
+    "react-flatpickr": "^4.0.10",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
