--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.1",
     "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^6.0.0",
