--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
+    "immer": "^10.1.1",
     "owasp-password-strength-test": "^1.3.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.1",
