--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,14 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "checkJs": false,
+    "noEmit": true,
+    "target": "ESNext",
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "baseUrl": "src",
     "paths": {
       "@components/*": ["components/*"],
