--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vite-plugin-imp": "^2.4.0",
     "vite-plugin-preload": "^0.4.2",
     "vite-plugin-pwa": "^1.0.0",
+    "vite-plugin-svgr": "^4.3.0",
     "yup": "^1.6.1",
     "zustand": "^5.0.5"
   },
