--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bad-words": "^4.0.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
