--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.8",
+    "@tiptap/pm": "^2.22.1",
+    "@tiptap/react": "^2.22.1",
+    "@tiptap/starter-kit": "^2.22.1",
     "axios": "^1.9.0",
     "bad-words": "^4.0.0",
     "body-scroll-lock": "^4.0.0-beta.0",
@@ -55,6 +58,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react-swc": "^3.9.0",
