--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.8",
-    "@tiptap/pm": "^2.22.1",
-    "@tiptap/react": "^2.22.1",
-    "@tiptap/starter-kit": "^2.22.1",
+    "@tiptap/react": "2.22.2",
+    "@tiptap/starter-kit": "2.22.2",
     "axios": "^1.9.0",
     "bad-words": "^4.0.0",
     "body-scroll-lock": "^4.0.0-beta.0",
