--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.8",
+    "@tiptap/extension-code-block-lowlight": "2.22.2",
     "@tiptap/react": "2.22.2",
     "@tiptap/starter-kit": "2.22.2",
     "axios": "^1.9.0",
@@ -26,6 +27,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
     "immer": "^10.1.1",
+    "lowlight": "3.3.0",
     "owasp-password-strength-test": "^1.3.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.1",
