--- a/package.json
+++ b/package.json
@@ -16,6 +16,16 @@
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.8",
     "@tiptap/extension-code-block-lowlight": "2.22.2",
+    "@tiptap/extension-color": "2.22.2",
+    "@tiptap/extension-highlight": "2.22.2",
+    "@tiptap/extension-link": "2.22.2",
+    "@tiptap/extension-table": "2.22.2",
+    "@tiptap/extension-table-cell": "2.22.2",
+    "@tiptap/extension-table-header": "2.22.2",
+    "@tiptap/extension-table-row": "2.22.2",
+    "@tiptap/extension-task-item": "2.22.2",
+    "@tiptap/extension-task-list": "2.22.2",
+    "@tiptap/extension-text-style": "2.22.2",
     "@tiptap/react": "2.22.2",
     "@tiptap/starter-kit": "2.22.2",
     "axios": "^1.9.0",
@@ -26,6 +36,7 @@
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
+    "highlight.js": "11.11.1",
     "immer": "^10.1.1",
     "lowlight": "3.3.0",
     "owasp-password-strength-test": "^1.3.0",
