--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.81.2",
     "@tiptap/extension-code-block-lowlight": "2.22.2",
@@ -33,6 +34,8 @@
     "axios": "^1.9.0",
     "bad-words": "^4.0.0",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "flatpickr": "^4.6.13",
@@ -41,6 +44,7 @@
     "highlight.js": "11.11.1",
     "immer": "^10.1.1",
     "lowlight": "3.3.0",
+    "lucide-react": "^0.525.0",
     "owasp-password-strength-test": "^1.3.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.1",
@@ -55,32 +59,39 @@
     "react-router-dom": "^7.6.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "react-wavify": "^1.11.1",
     "sharp": "^0.34.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "svgo": "^3.3.2",
     "swiper": "^11.2.8",
-    "tailwindcss": "^4.1.8",
+    "tailwind-merge": "^3.3.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-imp": "^2.4.0",
     "vite-plugin-preload": "^0.4.2",
     "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-svgr": "^4.3.0",
+    "yet-another-react-lightbox": "^3.23.4",
     "yup": "^1.6.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "memoize-one": "^6.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.4",
     "vite": "^6.3.5",
     "vite-bundle-analyzer": "^0.22.3"
   }
