--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "framer-motion": "^12.16.0",
     "highlight.js": "11.11.1",
     "immer": "^10.1.1",
+    "jwt-decode": "^4.0.0",
     "lowlight": "3.3.0",
     "lucide-react": "^0.525.0",
     "owasp-password-strength-test": "^1.3.0",
