--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -47,12 +49,14 @@
     "lowlight": "3.3.0",
     "lucide-react": "^0.525.0",
     "owasp-password-strength-test": "^1.3.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.1",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.4.2",
     "react-error-boundary": "^6.0.0",
     "react-flatpickr": "^4.0.10",
     "react-helmet-async": "^2.0.5",
