--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.81.2",
     "@tiptap/extension-code-block-lowlight": "2.22.2",
