--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-colorful": "^5.6.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-easy-crop": "^5.4.2",
     "react-error-boundary": "^6.0.0",
     "react-flatpickr": "^4.0.10",
