--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-router-dom": "^7.6.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "react-turnstile": "^1.1.4",
     "react-wavify": "^1.11.1",
     "sharp": "^0.34.2",
     "socket.io": "^4.8.1",
