--- a/jsconfig.json
+++ b/jsconfig.json
@@ -22,5 +22,5 @@
       "@lib/*": ["lib/*"]
     }
   },
-  "include": ["src", "public/disableErrors.js"]
+  "include": ["src", "public/disableErrors.js", "src/utils/theme/.jsx"]
 }
