--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.4",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.8",
@@ -76,6 +77,7 @@
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "ua-parser-js": "^2.0.4",
+    "vaul": "^1.1.2",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-imp": "^2.4.0",
